beirutes inseridos, sistema de filtros

--- a/public/partials/site.html
+++ b/public/partials/site.html
@@ -136,12 +136,12 @@
     <!-- FIM CONTAINER -->
 
     <!-- 3ª ETAPA PEDIDO -->
-    <div class="row dadosPedido" style="padding-left: 2%;padding-right: 0.8%; display: block;">
-      <div class="col-md-8 col-xs-12 col-sm-8 col-lg-8" style="background: white; border-radius: 10px; margin-top: 5%;">
+    <div class="row dadosPedido" style="padding-left: 2%;padding-right: 0.8%;">
+      <div class="col-md-8 col-xs-12 col-sm-8 col-lg-8" style="background: white; border-radius: 10px; margin-top: 2%;">
 
         <div class="col-md-12" style="background: white; border-radius: 10px;">
 
-          <ul class="nav nav-tabs" role="tablist" style="margin-top: 5%;">
+          <ul class="nav nav-tabs" role="tablist" style="margin-top: 2%;">
             <li role="presentation" class="active"><a href="#pizzas" aria-controls="home" role="tab" data-toggle="tab">Pizzas</a></li>
             <li role="presentation"><a href="#pizzasDoces" aria-controls="home" role="tab" data-toggle="tab">Pizzas doces</a></li>
             <li role="presentation"><a href="#esfihas" aria-controls="esfihas" role="tab" data-toggle="tab">Esfihas</a></li>
@@ -211,7 +211,7 @@
                       </div>
 
                       <div class="form-group">
-                        <label for="message-text" class="control-label">Observações do pedido(ex:sem cebola, sem tomate):</label>
+                        <label for="message-text" class="control-label">Observações do pedido(opicional):</label>
                         <textarea class="form-control" id="message-text" ng-model="observacoes"></textarea>
                       </div>
 
@@ -281,7 +281,7 @@
                       </div>
 
                       <div class="form-group">
-                        <label for="message-text" class="control-label">Observações:</label>
+                        <label for="message-text" class="control-label">Observações do pedido(opicional):</label>
                         <textarea class="form-control" id="message-text" ng-model="observacoes"></textarea>
                       </div>
 
@@ -352,7 +352,7 @@
                         </div>
                       </div>
                       <div class="form-group">
-                        <label for="message-text" class="control-label">Observações do pedido(ex:sem cebola, sem tomate):</label>
+                        <label for="message-text" class="control-label">Observações do pedido(opicional):</label>
                         <textarea class="form-control" id="message-text" ng-model="observacoes"></textarea>
                       </div>
 
@@ -420,7 +420,7 @@
                       </div>
 
                       <div class="form-group">
-                        <label for="message-text" class="control-label">Observações:</label>
+                        <label for="message-text" class="control-label">Observações do pedido(opicional):</label>
                         <textarea class="form-control" id="message-text" ng-model="observacoes"></textarea>
                       </div>
 
@@ -480,7 +480,7 @@
                         </div>
 
                         <div class="form-group">
-                          <label for="message-text" class="control-label">Observações do pedido(ex:sem cebola, sem tomate):</label>
+                          <label for="message-text" class="control-label">Observações do pedido(opicional):</label>
                           <textarea class="form-control" id="message-text" ng-model="observacoes"></textarea>
                         </div>
 
@@ -537,7 +537,7 @@
                         </div>
 
                         <div class="form-group">
-                          <label for="message-text" class="control-label">Observações do pedido(ex:sem cebola, sem tomate):</label>
+                          <label for="message-text" class="control-label">Observações do pedido(opicional):</label>
                           <textarea class="form-control" id="message-text" ng-model="observacoes"></textarea>
                         </div>
 
@@ -591,7 +591,7 @@
                         </div>
 
                         <div class="form-group">
-                          <label for="message-text" class="control-label">Observações do pedido(ex: sem gelo):</label>
+                          <label for="message-text" class="control-label">Observações do pedido(opicional):</label>
                           <textarea class="form-control" id="message-text" ng-model="observacoes"></textarea>
                         </div>
 
@@ -645,7 +645,7 @@
                         </div>
 
                         <div class="form-group">
-                          <label for="message-text" class="control-label">Observações do pedido(ex: sem gelo):</label>
+                          <label for="message-text" class="control-label">Observações do pedido(opicional):</label>
                           <textarea class="form-control" id="message-text" ng-model="observacoes"></textarea>
                         </div>
 
@@ -667,7 +667,7 @@
       </div>
       <!-- Tab panes -->
 
-      <div class="col-md-4 col-xs-12 col-sm-4 col-lg-4" style="margin-top: 5%;">
+      <div class="col-md-4 col-xs-12 col-sm-4 col-lg-4" style="margin-top: 2%;">
 
         <div class="col-md-12" style="background: white; border-radius: 10px;">
           <div class="col-md-12">
